--- a/src/app/Components/contact/contact.component.html
+++ b/src/app/Components/contact/contact.component.html
@@ -39,10 +39,65 @@
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.102144905603!2d88.4254925755468!3d22.57528268013591!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0275927b0061ad%3A0x496c2fab98874c86!2sWebskitters%20Technology%20Solutions%20Pvt.%20Ltd.!5e0!3m2!1sen!2sin!4v1679809634324!5m2!1sen!2sin"
                         width="600" height="508" frameborder="0" style="border:0; width: 100%;"
                         allowfullscreen></iframe>
+                                                
                 </div>
+                <br><br>
             </div>
         </div>
     </div>
 </div>
 <!-- contact section end -->
-
+ <!-- footer section start -->
+ <div class="footer_section layout_padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-sm-6">
+                <h3 class="useful_text">About</h3>
+                <p class="footer_text">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation u</p>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+                <h3 class="useful_text">Menu</h3>
+                <div class="footer_menu">
+                    <ul>
+                        <li><a routerLink="/home">Home</a></li>
+                        <li><a routerLink="/about">About Us</a></li>
+                        <li><a routerLink="/menu">Menu</a></li>
+                        <li><a routerLink="/services">Services</a></li>
+                        <li><a routerLink="/contact">Contact Us</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+                <h1 class="useful_text">Useful Link</h1>
+                <p class="dummy_text">Adipiscing Elit, sed do Eiusmod Tempor incididunt </p>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+                <h1 class="useful_text">Contact Us</h1>
+                <div class="location_text">
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-map-marker" aria-hidden="true"></i><span class="padding_left_10">Address
+                                    : Loram Ipusm</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-phone" aria-hidden="true"></i><span class="padding_left_10">Call : +01
+                                    1234567890</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-envelope" aria-hidden="true"></i><span class="padding_left_10">Email :
+                                    demo@gmail.com</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+  </div>
+  <!-- footer section end -->
