--- a/src/app/Components/menu/menu.component.html
+++ b/src/app/Components/menu/menu.component.html
@@ -1,25 +1,78 @@
 <div class="container py-3">
-    <h2>Menu</h2>
+    <!-- <h2>Menu</h2> -->
     <div class="row">
         <ng-container *ngFor="let prod of allItem">
             <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-4">
                 <div class="card p-3">
-                    <img src={{img_path}}{{prod?.image}} class="card-img-top" alt="product" height="200">
-                    <!-- <img [src]="img_path" class="card-img-top" alt="product" height="200"> -->
+                    <img src={{img_path}}{{prod?.image}} class="card-img-top" alt="product">
                     <div class="card-body">
                         <h6 class="card-title">
                             {{prod?.itemName}}
                         </h6>
                         <h6 class="card-title">
-                            {{prod?.itemDetails}}
+                            <!-- {{prod?.itemDetails}} -->
                         </h6>
                     </div>
-                    <!-- <a routerLink="details/{{prod._id}}">
+                    <a routerLink="/details/{{prod._id}}">
                         <button class="btn btn-primary">Details</button>
-                    </a> -->
+                    </a>
                 </div>
             </div>
         </ng-container>
     </div>
 </div>
 
+ <!-- footer section start -->
+ <div class="footer_section layout_padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-sm-6">
+                <h3 class="useful_text">About</h3>
+                <p class="footer_text">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation u</p>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+                <h3 class="useful_text">Menu</h3>
+                <div class="footer_menu">
+                    <ul>
+                        <li><a routerLink="/home">Home</a></li>
+                        <li><a routerLink="/about">About Us</a></li>
+                        <li><a routerLink="/menu">Menu</a></li>
+                        <li><a routerLink="/services">Services</a></li>
+                        <li><a routerLink="/contact">Contact Us</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+                <h1 class="useful_text">Useful Link</h1>
+                <p class="dummy_text">Adipiscing Elit, sed do Eiusmod Tempor incididunt </p>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+                <h1 class="useful_text">Contact Us</h1>
+                <div class="location_text">
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-map-marker" aria-hidden="true"></i><span class="padding_left_10">Address
+                                    : Loram Ipusm</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-phone" aria-hidden="true"></i><span class="padding_left_10">Call : +01
+                                    1234567890</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-envelope" aria-hidden="true"></i><span class="padding_left_10">Email :
+                                    demo@gmail.com</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+  </div>
+  <!-- footer section end -->
