--- a/src/app/Components/menu/details/details.component.html
+++ b/src/app/Components/menu/details/details.component.html
@@ -1,1 +1,18 @@
-<p>details works!</p>
+<!-- <p>details works!</p> -->
+
+
+
+<div class="card" style="width: 18rem;">
+    <img src="{{imagePath}}{{single_details.image}}" class="card-img-top" alt="">
+    <div class="card-body">
+      <h5 class="card-title">Name: {{single_details.itemName}}</h5>
+    </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">Description: {{single_details.itemDetails}}</li>
+      <li class="list-group-item">Price: {{single_details.price}}</li>
+    </ul>
+    <div class="card-body">
+      <a href="#" class="card-link">Card link</a>
+      <a href="#" class="card-link">Another link</a>
+    </div>
+  </div>
