--- a/src/app/Components/menu/details/details.component.html
+++ b/src/app/Components/menu/details/details.component.html
@@ -2,7 +2,7 @@
 
 
 
-<div class="card" style="width: 18rem;">
+<div class="card">
     <img src="{{imagePath}}{{single_details.image}}" class="card-img-top" alt="">
     <div class="card-body">
       <h5 class="card-title">Name: {{single_details.itemName}}</h5>
@@ -12,7 +12,8 @@
       <li class="list-group-item">Price: {{single_details.price}}</li>
     </ul>
     <div class="card-body">
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
+      <!-- <a href="#" class="card-link">Card link</a> -->
+      <button class="btn btn-primary">Order Now</button>
+      <!-- <a href="#" class="card-link">Another link</a> -->
     </div>
   </div>
