--- a/src/app/Components/menu/details/details.component.html
+++ b/src/app/Components/menu/details/details.component.html
@@ -5,13 +5,13 @@
 <div class="card">
     <img src="{{imagePath}}{{single_details.image}}" class="card-img-top" alt="">
     <div class="card-body">
-      <!-- <h5 class="card-title"><h1>Name:</h1> {{single_details.itemName}}</h5> -->
-      <h1 class="card-title">Name:</h1> <h4>{{single_details.itemName}}</h4>
+      <h4 class="card-title css"><b class="coffee">Name:</b> {{single_details.itemName}}</h4>
+      <!-- <h1 class="card-title"><b class="coffee">Name:</b> {{single_details.itemName}}</h1> -->
       <!-- <h1 class="card-title"> Name:{{single_details.itemName}}<p>{{single_details.itemName}}</p></h1> -->
     </div>
     <ul class="list-group list-group-flush">
-      <li class="list-group-item"><h1>Description: </h1>{{single_details.itemDetails}}</li>
-      <li class="list-group-item"><h1>Price:</h1> Rs. {{single_details.price}}</li>
+      <li class="list-group-item white"><b class="coffee">Description:</b> &nbsp;{{single_details.itemDetails}}</li>
+      <li class="list-group-item css"><b class="coffee">Price:</b> Rs. {{single_details.price}}</li>
     </ul>
     <div class="card-body">
       <!-- <a href="#" class="card-link">Card link</a> -->
