--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -11,10 +11,10 @@
                         <div class="col-sm-12">
                             <div class="banner_taital">
                                 <h1 class="outstanding_text">Outstanding</h1>
-                                <h1 class="coffee_text">Coffee Shop</h1>
+                                <h1 class="coffee_text">Coffee Hub</h1>
                                 <p class="there_text">There are many variations of passages of Lorem Ipsum available,
                                     but the majority have suffered alteration in some form, by injected humour, </p>
-                                <div class="learnmore_bt"><a href="#">Learn More</a></div>
+                                
                             </div>
                         </div>
                     </div>
@@ -24,10 +24,10 @@
                         <div class="col-sm-12">
                             <div class="banner_taital">
                                 <h1 class="outstanding_text">Outstanding </h1>
-                                <h1 class="coffee_text">Coffee Shop</h1>
+                                <h1 class="coffee_text">Coffee Hub</h1>
                                 <p class="there_text">There are many variations of passages of Lorem Ipsum available,
                                     but the majority have suffered alteration in some form, by injected humour, </p>
-                                <div class="learnmore_bt"><a href="#">Learn More</a></div>
+                               
                             </div>
                         </div>
                     </div>
@@ -37,10 +37,10 @@
                         <div class="col-sm-12">
                             <div class="banner_taital">
                                 <h1 class="outstanding_text">Outstanding </h1>
-                                <h1 class="coffee_text">Coffee Shop</h1>
+                                <h1 class="coffee_text">Coffee Hub</h1>
                                 <p class="there_text">There are many variations of passages of Lorem Ipsum available,
                                     but the majority have suffered alteration in some form, by injected humour, </p>
-                                <div class="learnmore_bt"><a href="#">Learn More</a></div>
+                                
                             </div>
                         </div>
                     </div>
@@ -72,8 +72,10 @@
         <div class="row">
             <div class="col-sm-12">
                 <h1 class="client_taital">Testimonial</h1>
-                <p class="client_text">Eeven slightly believable. If you are going to use a passage of Lorem Ipsum, you
-                    need to</p>
+                <p class="client_text">Coffee is a beverage prepared from roasted coffee beans.
+                    Darkly colored, bitter, and slightly acidic, coffee has a stimulating effect on
+                    humans, primarily due to its caffeine content. It has the highest sales in the
+                    world market for hot drinks.</p>
             </div>
         </div>
     </div>
@@ -90,15 +92,16 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="testimonial_section_2">
-                                    <h4 class="client_name_text">Monila <span class="quick_icon"><img
+                                    <h4 class="client_name_text">Coffee <span class="quick_icon"><img
                                                 src="/assets/images/quick-icon.png"></span></h4>
-                                    <p class="customer_text">many variations of passages of Lorem Ipsum available, but
-                                        the majority have suffered alteration in some form, by injected humour, or
-                                        randomised words which don't look even slightly believable. If you are going to
-                                        use a passage of Lorem Ipsum, you need to be sure there isn't anything
-                                        embarrassing hidden in the middle of text. All themany variations of passages of
-                                        Lorem Ipsum available, but the majority have suffered alteration in some
-                                        embarrassing hidden in the middle of text. All the</p>
+                                    <p class="customer_text">The seeds of the Coffea plant's fruits are separated to
+                                        produce unroasted green coffee beans. The beans are roasted and then ground into
+                                        fine particles that are typically steeped in hot water before being filtered
+                                        out, producing a cup of coffee. It is usually served hot, although chilled or
+                                        iced coffee is common. Coffee can be prepared and presented in a variety of ways
+                                        (e.g., espresso, French press, caffè latte, or already-brewed canned coffee).
+                                        Sugar, sugar substitutes, milk, and cream are often added to mask the bitter
+                                        taste or enhance the flavor.</p>
                                 </div>
                             </div>
                         </div>
@@ -111,15 +114,16 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="testimonial_section_2">
-                                    <h4 class="client_name_text">Monila <span class="quick_icon"><img
+                                    <h4 class="client_name_text">Preprocessing <span class="quick_icon"><img
                                                 src="/assets/images/quick-icon.png"></span></h4>
-                                    <p class="customer_text">many variations of passages of Lorem Ipsum available, but
-                                        the majority have suffered alteration in some form, by injected humour, or
-                                        randomised words which don't look even slightly believable. If you are going to
-                                        use a passage of Lorem Ipsum, you need to be sure there isn't anything
-                                        embarrassing hidden in the middle of text. All themany variations of passages of
-                                        Lorem Ipsum available, but the majority have suffered alteration in some
-                                        embarrassing hidden in the middle of text. All the</p>
+                                    <p class="customer_text">Coffee berries are traditionally selectively picked by
+                                        hand, which is labor-intensive as it involves the selection of only the berries
+                                        at the peak of ripeness. More commonly, crops are strip picked, where all
+                                        berries are harvested simultaneously regardless of ripeness by person or
+                                        machine. After picking, green coffee is processed by one of two types of
+                                        method—a dry process method which is often simpler and less labor-intensive, and
+                                        a wet process method, which incorporates batch fermentation, uses larger amounts
+                                        of water in the process, and often yields a milder coffee.</p>
                                 </div>
                             </div>
                         </div>
@@ -132,15 +136,17 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="testimonial_section_2">
-                                    <h4 class="client_name_text">Monila <span class="quick_icon"><img
+                                    <h4 class="client_name_text">Roasting <span class="quick_icon"><img
                                                 src="/assets/images/quick-icon.png"></span></h4>
-                                    <p class="customer_text">many variations of passages of Lorem Ipsum available, but
-                                        the majority have suffered alteration in some form, by injected humour, or
-                                        randomised words which don't look even slightly believable. If you are going to
-                                        use a passage of Lorem Ipsum, you need to be sure there isn't anything
-                                        embarrassing hidden in the middle of text. All themany variations of passages of
-                                        Lorem Ipsum available, but the majority have suffered alteration in some
-                                        embarrassing hidden in the middle of text. All the</p>
+                                    <p class="customer_text">The next step in the process is the roasting of green
+                                        coffee. Coffee is usually sold in a roasted state, and with rare exceptions,
+                                        such as infusions from green coffee beans,[93] coffee is roasted before it is
+                                        consumed. It can be sold roasted by the supplier, or it can be home roasted.[94]
+                                        The roasting process influences the taste of the beverage by changing the coffee
+                                        bean both physically and chemically. The bean decreases in weight as moisture is
+                                        lost and increases in volume, causing it to become less dense. The density of
+                                        the bean also influences the strength of the coffee and the requirements for
+                                        packaging.</p>
                                 </div>
                             </div>
                         </div>
@@ -158,8 +164,8 @@
 
 <!-- contact section end -->
 
- <!-- footer section start -->
- <div class="footer_section layout_padding">
+<!-- footer section start -->
+<div class="footer_section layout_padding">
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-sm-6">
@@ -210,5 +216,5 @@
             </div>
         </div>
     </div>
-  </div>
-  <!-- footer section end -->
+</div>
+<!-- footer section end -->
