--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="header_section">
    <div class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-         <div class="logo"><a routerLink="/home"><img src="/assets/images/logo.png"></a></div>
+         <div class="logo"><a routerLink="/home"><img src="/assets/images/logo3.jpg"></a></div>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -27,10 +27,9 @@
                <li class="nav-item">
                   <a class="nav-link" routerLink="/register"><i class="fa-sharp fa-solid fa-user">
                      </i></a>
+                  
                </li>
-               <li class="nav-item">
-                  <a class="nav-link" routerLink="#"><i class="fa fa-search" aria-hidden="true"></i></a>
-               </li>
+              
             </ul>
          </div>
       </nav>
@@ -38,3 +37,10 @@
 </div>
 <!--header section end -->
 <router-outlet></router-outlet>
+
+
+
+
+
+
+ 
