--- a/src/app/Components/services/services.component.html
+++ b/src/app/Components/services/services.component.html
@@ -10,7 +10,7 @@
         </div>
         <div class="services_section_2">
             <div class="row">
-                <div class="col-lg-4 col-sm-12 col-md-4">
+                <!-- <div class="col-lg-4 col-sm-12 col-md-4">
                     <div class="box_main active">
                         <div class="house_icon">
                             <img src="/assets/images/icon1.png" class="image_1">
@@ -20,7 +20,7 @@
                         <p class="tation_text">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea </p>
                         <div class="readmore_bt"><a href="#">Read More</a></div>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-lg-4 col-sm-12 col-md-4">
                     <div class="box_main">
                         <div class="house_icon">
@@ -29,10 +29,10 @@
                         </div>
                         <h3 class="decorate_text">20 Coffee Flavors</h3>
                         <p class="tation_text">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea </p>
-                        <div class="readmore_bt"><a href="#">Read More</a></div>
+                        <div class="readmore_bt"><a routerLink="/menu">Read More</a></div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-12 col-md-4">
+                <!-- <div class="col-lg-4 col-sm-12 col-md-4">
                     <div class="box_main">
                         <div class="house_icon">
                             <img src="/assets/images/icon3.png" class="image_1">
@@ -42,7 +42,7 @@
                         <p class="tation_text">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea </p>
                         <div class="readmore_bt"><a href="#">Read More</a></div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
