--- a/src/app/Components/contact/contact.component.html
+++ b/src/app/Components/contact/contact.component.html
@@ -100,4 +100,11 @@
         </div>
     </div>
   </div>
+
+  <div class="copyright_section">
+    <div class="container">
+        <p class="copyright_text">2020 All Rights Reserved. Design by <a href="https://html.design">Free html
+                Templates</a></p>
+    </div>
+  </div>
   <!-- footer section end -->
