--- a/src/app/Components/menu/details/details.component.html
+++ b/src/app/Components/menu/details/details.component.html
@@ -11,7 +11,10 @@
     </div>
     <ul class="list-group list-group-flush">
       <li class="list-group-item white"><b class="coffee">Description:</b> &nbsp;{{single_details.itemDetails}}</li>
-      <li class="list-group-item css"><b class="coffee">Price:</b> Rs. {{single_details.price}}</li>
+      <!-- <span class="text-danger fw-semibold me-2">$500</span><del>$250</del> -->
+      <li class="list-group-item css"><b class="coffee">Price:</b> ₹. {{single_details.price}}</li>
+      <!-- <span class="text-danger fw-semibold me-2"><b class="coffee">Price:</b> Rs. {{single_details.price}}</span><del>$250</del> -->
+
     </ul>
     <div class="card-body">
       <!-- <a href="#" class="card-link">Card link</a> -->
