--- a/src/app/Components/menu/menu.component.html
+++ b/src/app/Components/menu/menu.component.html
@@ -8,7 +8,21 @@
                     <div class="card-body">
                         <h6 class="card-title">
                             {{prod?.itemName}}
+                            <br>
+                           <span>
+                            <span class="text-danger fw-semibold me-2">₹  {{prod?.price}}</span><del>  ₹ {{prod?.price}}</del><br>
+                            <span class="text-success ms-2">20% Off</span>
+                            <br>
+                            <i class="fa-solid fa-star m-0" style=" color: rgb(208, 239, 8);"></i>
+                            <i class="fa-solid fa-star m-0" style=" color: rgb(208, 239, 8);"></i>
+                            <i class="fa-solid fa-star m-0" style=" color: rgb(208, 239, 8);"></i>
+                            <i class="fa-solid fa-star m-0" style=" color: rgb(208, 239, 8);"></i>
+                            <span class="text-muted">(22)</span>
+                           </span> 
+
                         </h6>
+                        
+                        
                         <h6 class="card-title">
                             <!-- {{prod?.itemDetails}} -->
                         </h6>
