--- a/src/app/Components/profile/profile.component.html
+++ b/src/app/Components/profile/profile.component.html
@@ -11,12 +11,12 @@
 
                         <div class="d-flex text-black">
 
-                            <div class="flex-shrink-0">
+                            <div class="flex-shrink-0" style="border-radius: 150px;">
                                 <img [src]="img_path" alt="Generic placeholder image" class="img-fluid ">
                             </div>
 
-                            <div class="flex-grow-1 ms-3">
-                                <h5 class="mb-1">
+                            <div class="flex-grow-1 ms-3" >
+                                <h5 class="mb-1" >
                                     <p>Name:<b>{{profile_pic?.name}}</b></p>
                                 </h5>
                                 <!-- <p class="mb-2 pb-1" style="color: #2b2a2a;"></p> -->
