--- a/src/app/Components/services/services.component.html
+++ b/src/app/Components/services/services.component.html
@@ -8,8 +8,8 @@
                 <p class="services_text">Typesetting industry lorem Ipsum is simply dummy text of the </p>
             </div>
         </div>
-        <div class="services_section_2">
-            <div class="row">
+        <!-- <div class="services_section_2"> -->
+            <!-- <div class="row"> -->
                 <!-- <div class="col-lg-4 col-sm-12 col-md-4">
                     <div class="box_main active">
                         <div class="house_icon">
@@ -21,17 +21,19 @@
                         <div class="readmore_bt"><a href="#">Read More</a></div>
                     </div>
                 </div> -->
+                
                 <div class="col-lg-4 col-sm-12 col-md-4">
                     <div class="box_main">
                         <div class="house_icon">
                             <img src="/assets/images/icon2.png" class="image_1">
                             <img src="/assets/images/icon2.png" class="image_2">
                         </div>
-                        <h3 class="decorate_text">20 Coffee Flavors</h3>
+                        <h3 class="decorate_text">15 Coffee Flavors</h3>
                         <p class="tation_text">Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea </p>
                         <div class="readmore_bt"><a routerLink="/menu">Read More</a></div>
                     </div>
                 </div>
+            
                 <!-- <div class="col-lg-4 col-sm-12 col-md-4">
                     <div class="box_main">
                         <div class="house_icon">
@@ -43,8 +45,8 @@
                         <div class="readmore_bt"><a href="#">Read More</a></div>
                     </div>
                 </div> -->
-            </div>
-        </div>
+            <!-- </div> -->
+        <!-- </div> -->
     </div>
 </div>
 <!-- services section end -->
