--- a/src/app/Components/menu/menu.component.html
+++ b/src/app/Components/menu/menu.component.html
@@ -21,15 +21,21 @@
                            </span> 
 
                         </h6>
-                        
+                       
                         
                         <h6 class="card-title">
                             <!-- {{prod?.itemDetails}} -->
                         </h6>
                     </div>
                     <a routerLink="/details/{{prod._id}}">
-                        <button class="btn btn-primary">Details</button>
+                        <div>
+                        <button class="btn btn-primary">Details</button>    
+                        <!-- <button class="btn btn-sm btn-success">Add To Cart</button> -->
+                    </div>
                     </a>
+                    <!-- <div class="col-6">
+                        <button class="btn btn-sm btn-success">Add To Cart</button>
+                    </div> -->
                 </div>
             </div>
         </ng-container>
