--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
                <li class="nav-item">
                   <a class="nav-link" routerLink="/contact">Contact Us</a>
                </li>
-               <a class="nav-link" href=""><i class="fa fa-cart-plus fs-5" style="color: white;"></i>
+               <a class="nav-link" routerLink="/Cart"><i class="fa fa-cart-plus fs-5" style="color: white;"></i>
                <span class="position-absolute translate-middle badge rounded rounded-pill bg-danger">2
                   <span class="visually-hidden"></span>
                </span>
