--- a/src/app/Components/profile/profile.component.html
+++ b/src/app/Components/profile/profile.component.html
@@ -12,7 +12,7 @@
                         <div class="d-flex text-black">
 
                             <div class="flex-shrink-0" style="border-radius: 150px;">
-                                <img [src]="img_path" alt="Generic placeholder image" class="img-fluid ">
+                                <img [src]="img_path" alt="Generic placeholder image" class="rounded-circle img-fluid ">
                             </div>
 
                             <div class="flex-grow-1 ms-3" >
