--- a/src/app/Components/cart/cart.component.html
+++ b/src/app/Components/cart/cart.component.html
@@ -7,7 +7,8 @@
         <!-- <th scope="col" class="table-danger">Item Details</th> -->
         <th scope="col" class="table-warning">Price</th>
         <th scope="col" class="table-danger">Quantity</th>
-        <th scope="col" class="table-primary">Delete</th>
+        <!-- <th scope="col" class="table-danger">subTotal</th> -->
+        <th scope="col" class="table-primary">Remove</th>
       </tr>
     </thead>
     <tbody *ngFor="let cartp of item; let i =index">
@@ -19,11 +20,16 @@
         <td class="table-warning">{{cartp.itemName}}</td>
         <!-- <td>{{cartp.itemDetails.slice(0,20)}}</td> -->
         <td class="table-secondary">{{cartp.price}}</td>
-        <td class="table-primary">1</td>
+        <td class="table-primary"> <button class="btn btn-info" (click)="inc()" >
+          <i class="fa fa-plus"></i></button><b>&nbsp;&nbsp;&nbsp;{{count}}&nbsp;&nbsp;&nbsp;</b>
+          <button class="btn btn-info"(click)="dec()">
+            <i class="fa fa-minus"></i></button>        
+        </td>
+        <!-- <td><strong>{{}}</strong></td> -->
         <td class="table-danger">
           <button class="btn btn-danger" (click)="del(cartp.id)">
-            <!-- <i class="fa-sharp fa-solid fa-trash"></i> -->
-            Remove
+            <i class="fa-sharp fa-solid fa-trash"></i>
+            
           </button>
         </td>
        
