--- a/src/app/Components/profile/profile.component.css
+++ b/src/app/Components/profile/profile.component.css
@@ -3,10 +3,19 @@
     height: 70px;
     width: 150px;
 }
-.img-fluid{
+/* .img-fluid{
     border: 2px solid black;
-}
+} */
 .borda{
     border: 2px solid #9de2ff;
-
+}
+.img-fluid{
+    border: 2px solid black;
+    flex: none;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    
 }
