--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,3 +5,11 @@
     /* padding:auto 150px; */
     /* max-width: 200px; */
 }
+.img-fluid{
+    border: 2px solid black;
+    flex: none;
+    height: 50px;
+    width: 40px;
+    border-radius: 50%;
+    justify-content: center;
+}
