--- a/src/app/Components/menu/menu.component.html
+++ b/src/app/Components/menu/menu.component.html
@@ -12,6 +12,7 @@
                            <span>
                             <span class="text-danger fw-semibold me-2">₹  {{prod?.price}}</span><del>  ₹ {{prod?.price}}</del><br>
                             <span class="text-success ms-2">20% Off</span>
+                            <span class="text-success ms-2">Discounted Price: {{discountedPrice }}</span>
                             <br>
                             <i class="fa-solid fa-star m-0" style=" color: rgb(208, 239, 8);"></i>
                             <i class="fa-solid fa-star m-0" style=" color: rgb(208, 239, 8);"></i>
