--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,7 +41,7 @@
                      <ng-container *ngIf="logggedIn()">
                         <a class="nav-link" href="#" data-toggle="dropdown">
                            <img [src]="img_path" class="rounded-circle img-fluid" alt="user"> </a>
-                        <p class="text-warning mt-3 fw-semibold">Hello, {{name}}</p>
+                        <p class="text-warning mt-3 fw-semibold">{{name}}</p>
                      </ng-container>
 
                      <!-- <span class="caret"></span></button> -->
