--- a/src/app/Components/cart/cart.component.html
+++ b/src/app/Components/cart/cart.component.html
@@ -1,4 +1,6 @@
-<table class="table">
+<div *ngIf="item.length > 0; else emptyCart">
+
+  <table class="table">
     <thead>
       <tr>
         <th scope="col" class="table-success">Sl No</th>
@@ -7,8 +9,9 @@
         <!-- <th scope="col" class="table-danger">Item Details</th> -->
         <th scope="col" class="table-warning">Price</th>
         <th scope="col" class="table-danger">Quantity</th>
-        <!-- <th scope="col" class="table-danger">subTotal</th> -->
+        <th scope="col" class="table-light">SubTotal</th>
         <th scope="col" class="table-primary">Remove</th>
+        <!-- <th scope="col" class="table-primary" colspan="7" rowspan="3">Total</th> -->
       </tr>
     </thead>
     <tbody *ngFor="let cartp of item; let i =index">
@@ -16,26 +19,45 @@
         <!-- <th scope="row">1</th> -->
         <td class="table-info">{{i+1}}</td>
         <td class="table-success">
-          <img src="{{img_path}}{{cartp.image}}" alt="image" height="50px" width="50px"></td>
+          <img src="{{img_path}}{{cartp.image}}" alt="image" height="50px" width="50px">
+        </td>
         <td class="table-warning">{{cartp.itemName}}</td>
         <!-- <td>{{cartp.itemDetails.slice(0,20)}}</td> -->
         <td class="table-secondary">{{cartp.price}}</td>
-        <td class="table-primary"> <button class="btn btn-info" (click)="inc()" >
-          <i class="fa fa-plus"></i></button><b>&nbsp;&nbsp;&nbsp;{{count}}&nbsp;&nbsp;&nbsp;</b>
-          <button class="btn btn-info"(click)="dec()">
-            <i class="fa fa-minus"></i></button>        
+        <td class="table-primary"> <button class="btn btn-info" (click)="inc()">
+            <i class="fa fa-plus"></i></button><b>&nbsp;&nbsp;&nbsp;{{count}}&nbsp;&nbsp;&nbsp;</b>
+          <button class="btn btn-info" (click)="dec()">
+            <i class="fa fa-minus"></i></button>
         </td>
+
+        <td class="table-success">{{ getSubtotal(cartp) }}</td>
         <!-- <td><strong>{{}}</strong></td> -->
         <td class="table-danger">
           <button class="btn btn-danger" (click)="del(cartp.id)">
             <i class="fa-sharp fa-solid fa-trash"></i>
-            
+
           </button>
         </td>
-       
-
-        
       </tr>
     </tbody>
   </table>
-        
+  <div>
+    <h3>Total: </h3>
+    <h3>Grand Total:</h3>
+  </div>
+  <hr>
+  <div class="buy">
+    <button class="btn btn-outline-primary"><a routerLink="">Buy Now</a></button>
+  </div>
+</div>
+
+
+
+<ng-template #emptyCart>
+  <div class="card" style="width: mt-4;">
+    <div class="card-body">
+      <h5 class="card-title">Your cart is empty</h5>
+      <a routerLink="/menu" class="shop">Shop Now</a>
+    </div>
+  </div>
+</ng-template>
