--- a/src/app/Components/menu/details/details.component.html
+++ b/src/app/Components/menu/details/details.component.html
@@ -18,7 +18,7 @@
       <!-- <a href="#" class="card-link">Card link</a> -->
       
       <p>
-      <button class="btn btn-outline-warning">Order Now</button>
+      <!-- <button class="btn btn-outline-warning">Order Now</button> -->
       <button class="btn btn-sm btn-success"  (click)="addItemTocart(single_details)">Add To Cart </button>
       
       </p>
