--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -255,11 +255,11 @@ button {
 .navbar-expand-lg .navbar-nav .nav-link {
     padding-right: .5rem;
     padding-left: .5rem;
-    font-size: 18px;
+    font-size: 17px;
     color: #fff;
 }
 
-.logo {}
+/* .logo {} */
 
 /* header section end */
 
