--- a/src/app/Components/cart/cart.component.html
+++ b/src/app/Components/cart/cart.component.html
@@ -47,7 +47,7 @@
   </div>
   <hr>
   <div class="buy">
-    <button class="btn btn-outline-primary"><a routerLink="">Buy Now</a></button>
+    <button class="btn btn-outline-primary"><a routerLink="/buynow">Buy Now</a></button>
   </div>
 </div>
 
