--- a/src/app/Components/cart/cart.component.html
+++ b/src/app/Components/cart/cart.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="item.length > 0; else emptyCart">
+<!-- <div *ngIf="item.length > 0; else emptyCart"> -->
 
   <table class="table">
     <thead>
@@ -25,7 +25,9 @@
         <!-- <td>{{cartp.itemDetails.slice(0,20)}}</td> -->
         <td class="table-secondary">{{cartp.price}}</td>
         
-        <td><button type="button"(click)="inc()"> + </button> {{cartp.quantity}} <button type="button" (click)="dec()"> - </button>
+        <td><button type="button"(click)="inc(i)"> + </button> 
+          {{cartp.quantity}} 
+          <button type="button" (click)="dec(i)"> - </button>
 
         </td>
         <td class="table-success">{{ getSubtotal(cartp) }}</td>
@@ -40,22 +42,22 @@
     </tbody>
   </table>
   <div>
-    <h3>Total: </h3>
-    <h3>Grand Total:</h3>
+    <h3>Total: {{getTotal}} </h3>
+    <h3>Grand Total: {{ grandTotal }}</h3>
   </div>
   <hr>
   <div class="buy">
     <button class="btn btn-outline-primary"><a routerLink="/buynow">Buy Now</a></button>
   </div>
-</div>
+<!-- </div> -->
 
 
 
-<ng-template #emptyCart>
+<!-- <ng-template #emptyCart>
   <div class="card" style="width: mt-4;">
     <div class="card-body">
       <h5 class="card-title">Your cart is empty</h5>
       <a routerLink="/menu" class="shop">Shop Now</a>
     </div>
   </div>
-</ng-template>
+</ng-template> -->
