--- a/src/app/Components/cart/cart.component.html
+++ b/src/app/Components/cart/cart.component.html
@@ -42,7 +42,7 @@
     </tbody>
   </table>
   <div>
-    <h3>Total: {{getTotal}} </h3>
+    <!-- <h3>Total: {{getTotal}} </h3> -->
     <h3>Grand Total: {{ grandTotal }}</h3>
   </div>
   <hr>
