--- a/src/app/Components/cart/cart.component.html
+++ b/src/app/Components/cart/cart.component.html
@@ -1,38 +1,39 @@
 <!-- <div *ngIf="item.length > 0; else emptyCart"> -->
 
-  <table class="table">
+  <table class="table table-striped">
     <thead>
       <tr>
-        <th scope="col" class="table-success">Sl No</th>
-        <th scope="col" class="table-info">Image</th>
-        <th scope="col" class="table-secondary">Item Name</th>
+        <th scope="col">Sl No</th>
+        <th scope="col">Image</th>
+        <th scope="col">Item Name</th>
         <!-- <th scope="col" class="table-danger">Item Details</th> -->
-        <th scope="col" class="table-warning">Price</th>
-        <th scope="col" class="table-danger">Quantity</th>
-        <th scope="col" class="table-light">SubTotal</th>
-        <th scope="col" class="table-primary">Remove</th>
+        <th scope="col">Price</th>
+        <th scope="col">Quantity</th>
+        <th scope="col">SubTotal</th>
+        <th scope="col">Remove</th>
         <!-- <th scope="col" class="table-primary" colspan="7" rowspan="3">Total</th> -->
       </tr>
     </thead>
     <tbody *ngFor="let cartp of item; let i =index">
       <tr>
         <!-- <th scope="row">1</th> -->
-        <td class="table-info">{{i+1}}</td>
-        <td class="table-success">
+        <td >{{i+1}}</td>
+        <td >
           <img src="{{img_path}}{{cartp.image}}" alt="image" height="50px" width="50px">
         </td>
-        <td class="table-warning">{{cartp.itemName}}</td>
+        <td >{{cartp.itemName}}</td>
         <!-- <td>{{cartp.itemDetails.slice(0,20)}}</td> -->
-        <td class="table-secondary">{{cartp.price}}</td>
+        <td>{{cartp.price}}</td>
         
-        <td><button type="button"(click)="inc(i)"> + </button> 
+        <td><button type="button"(click)="inc(cartp.id)"> + </button> 
           {{cartp.quantity}} 
-          <button type="button" (click)="dec(i)"> - </button>
+          <button type="button" (click)="dec(cartp.id)"> - </button>
 
         </td>
-        <td class="table-success">{{ getSubtotal(cartp) }}</td>
+        <td >{{ cartp.sub_total }}</td>
+        <!-- <td class="table-success">{{cartp.price*cartp.quantity}}</td> -->
         <!-- <td><strong>{{}}</strong></td> -->
-        <td class="table-danger">
+        <td >
           <button class="btn btn-danger" (click)="del(cartp.id)">
             <i class="fa-sharp fa-solid fa-trash"></i>
 
@@ -42,8 +43,8 @@
     </tbody>
   </table>
   <div>
-    <!-- <h3>Total: {{getTotal}} </h3> -->
-    <h3>Grand Total: {{ grandTotal }}</h3>
+    <h3>Total: {{grandTotal}} </h3>
+    <!-- <h3>Grand Total: {{getTotal()}}</h3> -->
   </div>
   <hr>
   <div class="buy">
