--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="header_section">
    <div class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-         <div class="logo"><a routerLink="/home"><img src="/assets/images/logo3.jpg"></a></div>
+         <div class="logo"><a routerLink="/home"><img src="/assets/images/coffeeHub.png" width="150px" height="100px"></a></div>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
