--- a/src/app/Components/menu/menu.component.html
+++ b/src/app/Components/menu/menu.component.html
@@ -75,7 +75,7 @@
                         <li>
                             <a href="#">
                                 <i class="fa fa-map-marker" aria-hidden="true"></i><span class="padding_left_10">Address
-                                    : Loram Ipusm</span>
+                                    : Kolkata</span>
                             </a>
                         </li>
                         <li>
@@ -99,8 +99,7 @@
 
   <div class="copyright_section">
     <div class="container">
-        <p class="copyright_text">2020 All Rights Reserved. Design by <a href="https://html.design">Free html
-                Templates</a></p>
+        <p class="copyright_text">2023 All Rights Reserved</p>
     </div>
   </div>
   <!-- footer section end -->
