--- a/src/app/Components/about/about.component.html
+++ b/src/app/Components/about/about.component.html
@@ -6,23 +6,31 @@
             <div class="col-md-6">
                 <div class="about_taital_main">
                     <div class="about_taital">About Us</div>
-                    <p class="about_text">Full cleaning and housekeeping services for companies and households.</p>
-                    <p class="about_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is simply</p>
-                    <div class="read_bt"><a href="#">Read More</a></div>
+                    <p class="about_text"><b>Taste and See Coffee Shop & Gallery</b>
+
+                    </p>
+                    <p class="about_text">Taste and See Coffee Shop and Gallery offers a unique coffee house environment
+                        unlike any other in Macon. We are not only a place to drop in and get your morning cup of coffee
+                        (although you are more than welcome to do that), we are a place where you can sit down and enjoy
+                        that tailor-made cup of coffee. If you need to work, We have everything from classic coffee to our house
+                        made specialty beverages. All of our sauces & syrups are made in-house with all natural
+                        ingredients (no chemicals or preservatives) ensuring you the highest quality in taste & health.
+                        You can complete your coffee with one of our delicious sweet treats made by our very own baker.
+                        We look forward to serving you at Taste & See Coffee Shop and Gallery!</p>
+                    <!-- <div class="read_bt"><a href="#">Read More</a></div> -->
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="about_img"><img src="/assets/images/about-img.png"></div>
-<br><br><br><br>
+                <br><br><br><br>
 
             </div>
         </div>
     </div>
 </div>
 <!-- about section end -->
- <!-- footer section start -->
- <div class="footer_section layout_padding">
+<!-- footer section start -->
+<div class="footer_section layout_padding">
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-sm-6">
@@ -73,12 +81,12 @@
             </div>
         </div>
     </div>
-  </div>
+</div>
 
-  <div class="copyright_section">
+<div class="copyright_section">
     <div class="container">
         <p class="copyright_text">2020 All Rights Reserved. Design by <a href="https://html.design">Free html
                 Templates</a></p>
     </div>
-  </div>
-  <!-- footer section end -->
+</div>
+<!-- footer section end -->
