--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -10,11 +10,14 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="banner_taital">
-                                <h1 class="outstanding_text">Outstanding</h1>
+                                <h1 class="outstanding_text">WE ARE OPEN</h1>
                                 <h1 class="coffee_text">Coffee Hub</h1>
-                                <p class="there_text">There are many variations of passages of Lorem Ipsum available,
-                                    but the majority have suffered alteration in some form, by injected humour, </p>
-                                
+                                <p class="there_text">Coffee is a beverage brewed from the roasted and ground seeds of
+                                    the tropical evergreen coffee plant. Coffee is one of the three most popular
+                                    beverages in the world alongside water and tea, and it is one of the most profitable
+                                    international commodities.
+                                </p>
+
                             </div>
                         </div>
                     </div>
@@ -23,11 +26,12 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="banner_taital">
-                                <h1 class="outstanding_text">Outstanding </h1>
+                                <h1 class="outstanding_text">DIFFERENT COFFEES</h1>
                                 <h1 class="coffee_text">Coffee Hub</h1>
-                                <p class="there_text">There are many variations of passages of Lorem Ipsum available,
-                                    but the majority have suffered alteration in some form, by injected humour, </p>
-                               
+                                <p class="there_text">A coffeehouse, coffee shop, or café is an establishment that
+                                    primarily serves various types of coffee, notably espresso, latte, and cappuccino.
+                                </p>
+
                             </div>
                         </div>
                     </div>
@@ -36,11 +40,10 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="banner_taital">
-                                <h1 class="outstanding_text">Outstanding </h1>
+                                <h1 class="outstanding_text">DIFFERENTS TASTES </h1>
                                 <h1 class="coffee_text">Coffee Hub</h1>
-                                <p class="there_text">There are many variations of passages of Lorem Ipsum available,
-                                    but the majority have suffered alteration in some form, by injected humour, </p>
-                                
+                                <p class="there_text">Very Delicious and Different Flavors Our Coffees Try it Now </p>
+
                             </div>
                         </div>
                     </div>
@@ -223,5 +226,5 @@
         <p class="copyright_text">2020 All Rights Reserved. Design by <a href="https://html.design">Free html
                 Templates</a></p>
     </div>
-  </div>
+</div>
 <!-- footer section end -->
