--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,9 +9,9 @@
          </button>
          <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-               <li class="nav-item ">
+               <!-- <li class="nav-item ">
                   <a class="nav-link" routerLink="/home">Home</a>
-               </li>
+               </li> -->
                <li class="nav-item">
                   <a class="nav-link" routerLink="/about">About Us</a>
                </li>
