--- a/src/app/Components/about/about.component.html
+++ b/src/app/Components/about/about.component.html
@@ -12,7 +12,8 @@
                     <p class="about_text">Taste and See Coffee Shop and Gallery offers a unique coffee house environment
                         unlike any other in Macon. We are not only a place to drop in and get your morning cup of coffee
                         (although you are more than welcome to do that), we are a place where you can sit down and enjoy
-                        that tailor-made cup of coffee. If you need to work, We have everything from classic coffee to our house
+                        that tailor-made cup of coffee. If you need to work, We have everything from classic coffee to
+                        our house
                         made specialty beverages. All of our sauces & syrups are made in-house with all natural
                         ingredients (no chemicals or preservatives) ensuring you the highest quality in taste & health.
                         You can complete your coffee with one of our delicious sweet treats made by our very own baker.
@@ -29,64 +30,43 @@
     </div>
 </div>
 <!-- about section end -->
-<!-- footer section start -->
-<div class="footer_section layout_padding">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3 col-sm-6">
-                <h3 class="useful_text">About</h3>
-                <p class="footer_text">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation u</p>
-            </div>
-            <div class="col-lg-3 col-sm-6">
-                <h3 class="useful_text">Menu</h3>
-                <div class="footer_menu">
-                    <ul>
-                        <li><a routerLink="/home">Home</a></li>
-                        <li><a routerLink="/about">About Us</a></li>
-                        <li><a routerLink="/menu">Menu</a></li>
-                        <li><a routerLink="/services">Services</a></li>
-                        <li><a routerLink="/contact">Contact Us</a></li>
-                    </ul>
+
+
+<div class="container py-3">
+    <h3 class="text-center"><b>Meet With Our Team </b></h3>
+    <p class="max-width" style="text-align: center;">Here is the whole team, who are the contributors to the website designing
+    <div class="row team">
+        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-4">
+            <div class="card p-3">
+                <img src="/assets/images/nabbendu.jpg" class="card-img-top" alt="image">
+                <div class="card-body">
+                    <h6 class="card-title">Nabendu Bag </h6>
+                    <h6 class="card-title"></h6>
                 </div>
             </div>
-            <div class="col-lg-3 col-sm-6">
-                <h1 class="useful_text">Useful Link</h1>
-                <p class="dummy_text">Adipiscing Elit, sed do Eiusmod Tempor incididunt </p>
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-4">
+            <div class="card p-3">
+                <img src="/assets/images/souvik_das.jpeg" class="card-img-top" alt="image">
+                <div class="card-body">
+                    <h6 class="card-title">Souvik Das </h6>
+                    <h6 class="card-title"></h6>
+                </div>
             </div>
-            <div class="col-lg-3 col-sm-6">
-                <h1 class="useful_text">Contact Us</h1>
-                <div class="location_text">
-                    <ul>
-                        <li>
-                            <a href="#">
-                                <i class="fa fa-map-marker" aria-hidden="true"></i><span class="padding_left_10">Address
-                                    : Loram Ipusm</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fa fa-phone" aria-hidden="true"></i><span class="padding_left_10">Call : +01
-                                    1234567890</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fa fa-envelope" aria-hidden="true"></i><span class="padding_left_10">Email :
-                                    demo@gmail.com</span>
-                            </a>
-                        </li>
-                    </ul>
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-4">
+            <div class="card p-3">
+                <img src="/assets/images/ankur.jpg" class="card-img-top" alt="image">
+                <div class="card-body">
+                    <h6 class="card-title">Ankur Biswas </h6>
+                    <h6 class="card-title"></h6>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<div class="copyright_section">
-    <div class="container">
-        <p class="copyright_text">2020 All Rights Reserved. Design by <a href="https://html.design">Free html
-                Templates</a></p>
-    </div>
-</div>
-<!-- footer section end -->
+
+
+
+
