--- a/src/app/Components/profile/profile.component.html
+++ b/src/app/Components/profile/profile.component.html
@@ -52,8 +52,8 @@
     </div>
 </section>
 
-<div class="copyright_section">
+<!-- <div class="copyright_section">
     <div class="container">
         <p class="copyright_text">2023 All Rights Reserved. Design by @Nabendu @Souvik @Ankur</p>
     </div>
-  </div>
+  </div> -->
