--- a/src/app/Components/about/about.component.html
+++ b/src/app/Components/about/about.component.html
@@ -27,46 +27,41 @@
 
             </div>
         </div>
+        <div class="team">
+            <div class="container py-3">
+                <h3 class="text-center"><b>Meet With Our Team </b></h3>
+                <p class="text-center">Here is the whole team, who are the contributors to the website designing
+                <div class="row ">
+                    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-4">
+                        <div class="card p-3">
+                            <img src="/assets/images/nabbendu.jpg" class="card-img-top" alt="image">
+                            <div class="card-body">
+                                <h6 class="card-title" style="text-align: center;">Nabendu Bag </h6>
+                                <h6 class="card-title"></h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-4">
+                        <div class="card p-3">
+                            <img src="/assets/images/souvik_das.jpeg" class="card-img-top" alt="image">
+                            <div class="card-body">
+                                <h6 class="card-title"style="text-align: center;">Souvik Das </h6>
+                                <h6 class="card-title"></h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4 mb-4">
+                        <div class="card p-3">
+                            <img src="/assets/images/ankur.jpg" class="card-img-top" alt="image">
+                            <div class="card-body">
+                                <h6 class="card-title"style="text-align: center;">Ankur Biswas </h6>
+                                <h6 class="card-title"></h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 <!-- about section end -->
-
-
-<div class="container py-3">
-    <h3 class="text-center"><b>Meet With Our Team </b></h3>
-    <p class="max-width" style="text-align: center;">Here is the whole team, who are the contributors to the website designing
-    <div class="row team">
-        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-4">
-            <div class="card p-3">
-                <img src="/assets/images/nabbendu.jpg" class="card-img-top" alt="image">
-                <div class="card-body">
-                    <h6 class="card-title">Nabendu Bag </h6>
-                    <h6 class="card-title"></h6>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-4">
-            <div class="card p-3">
-                <img src="/assets/images/souvik_das.jpeg" class="card-img-top" alt="image">
-                <div class="card-body">
-                    <h6 class="card-title">Souvik Das </h6>
-                    <h6 class="card-title"></h6>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-4">
-            <div class="card p-3">
-                <img src="/assets/images/ankur.jpg" class="card-img-top" alt="image">
-                <div class="card-body">
-                    <h6 class="card-title">Ankur Biswas </h6>
-                    <h6 class="card-title"></h6>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-
-
-
