--- a/src/app/Components/cart/cart.component.html
+++ b/src/app/Components/cart/cart.component.html
@@ -34,7 +34,7 @@
         <!-- <td class="table-success">{{cartp.price*cartp.quantity}}</td> -->
         <!-- <td><strong>{{}}</strong></td> -->
         <td >
-          <button class="btn btn-danger" (click)="del(cartp.id)">
+          <button class="btn btn-danger" (click)="delNoti()" (click)="del(cartp.id)">
             <i class="fa-sharp fa-solid fa-trash"></i>
 
           </button>
@@ -51,6 +51,9 @@
     <button class="btn btn-outline-primary"><a routerLink="/buynow">Buy Now</a></button>
   </div>
 </div>
+<br><br>
+<br><br>
+<br><br>
 
 
 
