--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -30,7 +30,7 @@
                         <li>
                             <a href="#">
                                 <i class="fa fa-map-marker" aria-hidden="true"></i><span class="padding_left_10">Address
-                                    : Loram Ipusm</span>
+                                    : Kolkata</span>
                             </a>
                         </li>
                         <li>
