--- a/src/app/Components/menu/details/details.component.css
+++ b/src/app/Components/menu/details/details.component.css
@@ -1,19 +1,13 @@
-/* *{margin: 0%;
-    padding: 0%;
-} */
-
+/* 
 .card{
     margin: auto;
     width:50%;
-    /* background-color:#2610b3 ; */
     border:.1px solid #ccc;
     box-shadow:  3px 4px rgba(8,76,93);
     height:auto;
     overflow:hidden;
     position:relative;
-    /* top:-5vh; */
-    /* transition: all ease-in-out 0.5s; */
-    /* transform: scale(.9) translate(-5%, -5%); */
+   
     z-index:1;
     opacity: .9;
 
@@ -29,13 +23,9 @@
     justify-content:center;
     flex-direction:column;
     font-size: larger;
-    /* background-color: rgb(99, 6, 6); */
 }
 .btn{
-    /* background-color:#2610b3 ; */
-     /* text-align: center; */
      margin-left: 260px;
-     /* margin: auto; */
 }
 .coffee{
     color: rgb(14, 13, 13);
@@ -50,4 +40,25 @@
 .white{
     color: rgb(2, 0, 2);
     font-weight: bold;  
+} */
+
+.card{
+    border:.1px solid #000000;
+    margin: auto;
+    margin-left: 1px;
+    /* margin-right: 5px; */
+    /* margin-top: 5px; */
+    margin-bottom: 1px;
+}
+.img-fluid{
+    height: 440px;
+    object-fit: cover;
+    width: 782px;
+    display: block;
+    max-width: 100%;
+    text-align: center;
+    align-items:center;
+    justify-content:center;
+    flex-direction:column;
+    font-size: larger;
 }
